feat: deps sync

--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@l2beat/shared-pure": "*",
     "@l2beat/shared": "*",
+    "@l2beat/discovery": "*",
     "kysely": "^0.27.3",
     "prisma": "^5.15.0"
   },
